--- a/app/views/forecasts.scala.html
+++ b/app/views/forecasts.scala.html
@@ -4,7 +4,7 @@
 	<script src="@routes.Assets.at("javascripts/forecasts.js")" type="text/javascript"></script>
 }
 
-@layout.main("Forecasts", head = headContent) {
+@layout.main("Forecasts", head = headContent, activeNav = "game") {
     
     <header class="jumbotron subhead">
     	<a name="top"></a>
