--- a/app/views/groups.scala.html
+++ b/app/views/groups.scala.html
@@ -16,7 +16,7 @@
 	}
 }
 
-@layout.main("Groups") {
+@layout.main("Groups", activeNav = "competition") {
     
     <div class="page-header">
     	<h1>Groups
