--- a/app/views/ranking.scala.html
+++ b/app/views/ranking.scala.html
@@ -1,6 +1,6 @@
 @(rankings: Seq[UserRanking])(implicit request: play.api.mvc.RequestHeader)
 
-@layout.main("Ranking") {
+@layout.main("Ranking", activeNav = "game") {
     
     <div class="page-header">
     	<h1>Ranking
