--- a/app/views/schedule.scala.html
+++ b/app/views/schedule.scala.html
@@ -1,6 +1,6 @@
 @(matchesByPhase: Map [String, Seq[Match]])(implicit request: play.api.mvc.RequestHeader)
 
-@layout.main("Home") {
+@layout.main("Schedule / Results", activeNav = "competition") {
     
     <header class="jumbotron subhead">
     	<a name="top"></a>
