--- a/app/views/teams.scala.html
+++ b/app/views/teams.scala.html
@@ -1,6 +1,6 @@
 @(teams: Seq[Team], groups: Set[String])(implicit request: play.api.mvc.RequestHeader)
 
-@layout.main("eu2012") {
+@layout.main("Teams", activeNav = "competition") {
     
     Hi there
     
