--- a/app/views/standings.scala.html
+++ b/app/views/standings.scala.html
@@ -1,6 +1,6 @@
 @(groups: Set[String], standings: Map[String, Seq[Standing]])(implicit request: play.api.mvc.RequestHeader)
 
-@layout.main("Standings") {
+@layout.main("Standings", activeNav = "competition") {
     
     <div class="page-header">
     	<h1>Standings
