--- a/app/views/helper/groupStandings.scala.html
+++ b/app/views/helper/groupStandings.scala.html
@@ -2,7 +2,7 @@
 
 	<div class="standings group@group">
     	<h4>Group @group</h4>
-    	<table class="table">
+    	<table class="table no-hover">
     		<thead>
     			<tr>
     				<th></th>
