--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -133,6 +133,11 @@ span.error {
 	font-size: 14px;
 }
 
+// disbale bootstrap table hover color
+table.no-hover tbody tr:hover td {
+	background-color: transparent;
+}
+
 // ~~~~~~~~~~~~~~~~~~~~~ Forecasts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 a.scoreSaveBtn {
@@ -444,7 +449,7 @@ div.score {
 		line-height: normal;
 		border: 1px solid #ccc;
 		border-bottom-color: #bbb;
-		.border-radius(4px);
+		.border-radius(8px);
 		@shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
 		.box-shadow(@shadow);
 	}
@@ -505,6 +510,12 @@ div.group {
 	li {
 		color: #F0F0F0;
 		#font > .verdana(normal, 20px, 30px);
+		line-height: 40px;
+		
+		img {
+			vertical-align: middle; 
+			margin-right: 5px;
+		}
 	}
 }
 
@@ -552,10 +563,11 @@ div.ranking {
 	border-right: 1px solid #E8E8E8;
 	border-bottom: 1px solid #E8E8E8;
 	padding: 5px 5px;
-	margin-left: 150px;
+	//margin-left: 150px;
 	
 	&:hover {
 		background-color: rgb(255, 255, 239);
+		cursor: pointer;
 	}
 
 	&:first-child {
