improved admin section

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -466,9 +466,10 @@ div.score {
 	    border-bottom-left-radius: 0px 0px;
 	}
 	div.winner {
-		.linear-gradient(#5bc0de, #339bb9);
-		color: #eee;
-		text-shadow: 0 1px 1px rgba(0,0,0,.75);
+		//.linear-gradient(#5bc0de, #339bb9);
+		.linear-gradient(#e2f6d0, #cbebb1);
+		//color: #eee;
+		//text-shadow: 0 1px 1px rgba(0,0,0,.75);
 	}
 }
 
@@ -658,6 +659,18 @@ div.ranking {
 // ~~~~~~~~~~~~~~~~~~~~~ Admin ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 table.userForecasts {
+	td {
+		vertical-align: middle;
+	}
+}
+
+div#matches table td {
+	vertical-align: middle;
+	padding: 8px 5px;
+	input { margin-bottom: 0px; }
+}
+
+table.scenarios {
 	td {
 		vertical-align: middle;
 	}
