--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -16,6 +16,8 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/bootstrap-dropdown.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/bootstrap-scrollspy.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/bootstrap-tooltip.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/bootstrap-popover.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
 		<script type="text/javascript">
 			// variable used in external scripts to link assets
