--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -23,6 +23,7 @@
 			// variable used in external scripts to link assets
 			var assetsRoot = "@routes.Assets.at("")";
 		</script>
+		@helper.javascriptRoutes()
 		@head
     </head>
     <body data-spy="scroll" data-target=".subnav" data-offset="50">
