--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -138,6 +138,15 @@ table.no-hover tbody tr:hover td {
 	background-color: transparent;
 }
 
+div.portlet {
+	text-shadow: 0 1px 0 white; 
+	border: 1px solid rgba(0, 0, 0, .1);
+	.border-radius(6px);
+
+	margin-bottom: 10px;
+	padding: 10px;
+}
+
 // ~~~~~~~~~~~~~~~~~~~~~ Forecasts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 a.scoreSaveBtn {
@@ -672,6 +681,21 @@ div.ranking {
 		text-transform: uppercase;
 	}
 
+}
+
+div.pts2 {
+	float: left;
+	
+	strong {
+		//display: block;
+		font-size: 26px;
+		color: #333;
+	}
+	
+	color: #999;
+	font-size: 10px;
+	line-height: 20px;
+	text-transform: uppercase;
 }
 
 // ~~~~~~~~~~~~~~~~~~~~~ Admin ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
