--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -1,6 +1,6 @@
 @()(implicit request: play.api.mvc.RequestHeader)
 
-@currentDateTimeChooser = {
+@currentDateTimeChooser_TO_BE_DELETED = {
 	@defining(Param.getCurrentDateTime()) { currentDateTime =>
 	<div>
 		<label for="currentDateChooser">Current date and time</label>
@@ -15,7 +15,7 @@
 }
 
 @headContent = {
-	<script src="@routes.Assets.at("javascripts/jquery-ui-1.8.16.custom.min.js")"></script>
+	<script src="@routes.Assets.at("javascripts/jquery-ui-1.8.18.custom.min.js")"></script>
 	<script src="@routes.Assets.at("javascripts/bootstrap-button.js")" type="text/javascript"></script>
 	<script src="@routes.Assets.at("javascripts/admin.js")" type="text/javascript"></script>
 	<link rel="stylesheet" href="@routes.Assets.at("stylesheets/themes/cupertino/jquery.ui.all.css")">
@@ -51,7 +51,7 @@
 		    			Select the appropriate tab.
 	    			</p>
 	    			
-	    			@currentDateTimeChooser
+	    			@helper.dateSlider()
 	    		</div>
 	    		<div id="teams" class="tab-pane">
 	    			balblabla teams bla bla
