--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -54,11 +54,9 @@
           			</ul>
           			
  					<ul class="nav pull-right">
- 						<li>
- 							<span style="color: #999;">
- 								Simulate Date : @models.Param.getCurrentDateTime.format("dd/MM HH:mm")
- 							</span>
- 						</li>
+ 					@helper.Sec.IsAdmin {
+ 						<!-- some html content only viewable by an admin -->
+					}
  					@controllers.Security.username.map { user =>
 						<li class="dropdown">
 	              			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -86,7 +84,6 @@
 			<div class="content">
 				@content
 			</div>
-	
 			<hr>
 			<footer>
 				<p>&copy; OzB 2011</p>
