--- a/public/stylesheets/themes/cupertino/jquery.ui.base.css
+++ b/public/stylesheets/themes/cupertino/jquery.ui.base.css
@@ -1,3 +1,4 @@
 @import url("jquery.ui.core.css");
 @import url("jquery.ui.autocomplete.css");
+@import url("jquery.ui.slider.css");
 @import url("jquery.ui.datepicker.css");
