display team name instead of id; changed design of match schedule

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -227,7 +227,7 @@ div.match-day {
 	.center();
 	
 	div.match-item {
-		@center-div-width: 195px;
+		@center-div-width: 80px;
 	
 		position: relative;
 		text-align: center;
@@ -253,12 +253,14 @@ div.match-day {
 
 		div.teamA {
 			text-align: left;
-			min-width: 40px;
+			width: 100px;
+			#font > .verdana(normal, 16px, 20px);
 		}
 		
 		div.teamB {
 			text-align: right;
-			min-width: 40px;
+			width: 100px;
+			#font > .verdana(normal, 16px, 20px);
 		}
 		
 		div.score {
