changed forecast design to match schedule/results design

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -227,7 +227,7 @@ div.match-day {
 	.center();
 	
 	div.match-item {
-		@center-div-width: 80px;
+		@center-div-width: 106px;
 	
 		position: relative;
 		text-align: center;
@@ -280,10 +280,11 @@ div.match-day {
 		
 		div.forecast-box {
 			min-width: @center-div-width;
+			padding: 0;
 			
 			div.forecast-input {
 				input {
-					width: 40px;
+					width: 35px;
 					text-align: center;
 					margin-bottom: 3px; // override bootstrap 9px
 				}
@@ -293,7 +294,7 @@ div.match-day {
 				display: block;
 				padding: 0;
 				text-align: left;
-				margin-left: 20px;
+				margin-left: 0px;
 				
 				color: #999;
 				
