--- a/app/views/helper/forecastsTable.scala.html
+++ b/app/views/helper/forecastsTable.scala.html
@@ -118,7 +118,7 @@
 		  		}
 			</div>
 			<div class="teamA">
-	  			@zmatch.teamAorFormula
+	  			@Messages("team." + zmatch.teamAorFormula)
 			</div>
 
 			@if(zmatch.played) {
@@ -134,7 +134,7 @@
 			}
 				
 			<div class="teamB">
-	  			@zmatch.teamBorFormula
+	  			@Messages("team." + zmatch.teamBorFormula)
 			</div>
 			<div class="flag">
 				@zmatch.teamB.map { teamB =>
