removed team name form team table (now teams names are stored in messages); fixed group page design

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -263,6 +263,8 @@ div.match-day {
 			#font > .verdana(normal, 16px, 20px);
 		}
 		
+		div.match-result { padding: 0; }
+		
 		div.score {
 			min-width: @center-div-width;
 		}
